And more spelling fixes, how can there be this many errors????

--- a/localisation/KR_American_Union_State_l_english.yml
+++ b/localisation/KR_American_Union_State_l_english.yml
@@ -90,7 +90,7 @@ TEX_military_economics:0 "Military economics"
 TEX_military_economics_desc:0 ""
 TEX_a_new_economy:0 "A new Economy"
 TEX_a_new_economy_desc:0 ""
-TEX_corprotist_economics:0 "Corportists Economics"
+TEX_corprotist_economics:0 "Corporate Economics"
 TEX_corprotist_economics_desc:0 ""
 TEX_women_at_work:0 "Women at Work"
 TEX_women_at_work_desc:0 ""
@@ -282,6 +282,7 @@ TEX_solider_bill:0 "G.I Bill"
 TEX_kingfish_loyalty:0 "Loyalty to the Kingfish"
 TEX_divided_government:0 "Internal Conflicts"
 TEX_political_conflicts:0 "Political Conflicts"
+
 ### Parties ###
 TEX_totalist_party:0 "ACP"
 TEX_totalist_party_long:0 "American Communist Party"
