--- a/localisation/KR_Bharatiyan_Commune_l_english.yml
+++ b/localisation/KR_Bharatiyan_Commune_l_english.yml
@@ -327,7 +327,7 @@ beng.12.a:0 "Jai hind!"
 beng.12.b:0 "Congratulations to Chairman Gadhi!"
 beng.12.c:0 "I see..."
 beng.15.t:0 "The Question of India's Elites"
-beng.15.d:0 "As economic recovery continues in [Root.GetNameDef], one issue we are repeatedly encountering is that of the cultural elites that remain even after the changes to the social order following the civil war. They have neither the influence nor wealth they once did, but they are not without resources - and it is not uncommon for the 'lower classes' to give them deference even when the law is in their favor. These elites often ignore laws requiring them to work with those they see beneath them, and hold onto precious resources even when they are required to give them up. Gaining compliance will be tricky, considering many of our citizens take a blind eye to their transgressions."
+beng.15.d:0 "As economic recovery continues in [Root.GetNameDef], one issue we are repeatedly encountering is that of the cultural elites that remain even after the changes to the social order following the civil war. They have neither the influence nor wealth they once did, but they are not without resources - and it is not uncommon for the 'lower classes' to give them deference even when the law is in their favour. These elites often ignore laws requiring them to work with those they see beneath them, and hold onto precious resources even when they are required to give them up. Gaining compliance will be tricky, considering many of our citizens take a blind eye to their transgressions."
 beng.15.a:0 "Force them to comply - by force if necessary!"
 beng.15.b:0 "Offer incentives to the elites to work with the new order"
 beng.15.c:0 "We need their resources - promote the willing to good positions"
