--- a/localisation/KR_Commune_of_France_l_english.yml
+++ b/localisation/KR_Commune_of_France_l_english.yml
@@ -461,7 +461,7 @@ FRA_submarines_desc:0 "As modern war takes to the air, it also goes under the se
 FRA_cut_off_capitalists:0 "Cut off the Capitalists"
 FRA_cut_off_capitalists_desc:0 "We cannot simply sit and watch as the Empires of old extort the peoples of the world and bring their blunder back to their colonial offices to count and enjoy. We will ensure that every convoy hauling their unjustly seized goods fears the Communal submarine."
 FRA_naval_bombers:0 "Develop Naval Bombers"
-FRA_naval_bombers_desc:0 "The air can well pair with the sea. Planes carrying torpedoes allow us to instantly kill even the biggest of ships with great accuracy, the torpedoes preventing us from having to hit dead center on a ship's deck with a bomb. We must invest in naval bombers to gain an edge on big, bulky navies."
+FRA_naval_bombers_desc:0 "The air can well pair with the sea. Planes carrying torpedoes allow us to instantly kill even the biggest of ships with great accuracy, the torpedoes preventing us from having to hit dead centre on a ship's deck with a bomb. We must invest in naval bombers to gain an edge on big, bulky navies."
 FRA_protect_coastlines:0 "Protect our Coastlines"
 FRA_protect_coastlines_desc:0 "Eventually, our navy cannot protect every single beach and every single small harbour in our country. However, we can plan ahead and add some basic fortifications to ensure we are not taken by surprise. If they land on our beaches, they will enjoy cold hard steel after a long time at sea."
 
