--- a/localisation/KR_South_Africa_l_english.yml
+++ b/localisation/KR_South_Africa_l_english.yml
@@ -181,19 +181,19 @@ SAF_strengthen_the_cape_garrison_artillery_mod_desc:0 "The Cape Garrison guns mu
 
 SAF_1938_elections:0 "The 1938 General Elections"
 SAF_1938_elections_tt:0 "We will get access to major internal and diplomatic reforms and stances once the '§Y1938 General Elections§!' take place and a new party and ideology is chosen to lead South Africa forwards. Pending any inconveniences, that is."
-SAF_1938_elections_desc: "Scheduled to take place in May of 1938, the South African General Elections will probably be the most polarized our country has ever seen, with two radically different views of our country's future in play. The stakes are high, as whoever wins will choose the path forward, and there are no obvious favourites yet."
+SAF_1938_elections_desc: "Scheduled to take place in May of 1938, the South African General Elections will probably be the most polarised our country has ever seen, with two radically different views of our country's future in play. The stakes are high, as whoever wins will choose the path forward, and there are no obvious favourites yet."
 
 SAF_nationalist_reform:0 "The Apartheid Process"
-SAF_nationalist_reform_desc:0 "The victory of the Nationalists in the 1938 Elections also implies the victory of all the ideas that had since sat on the fringes of the ruling party. At the center of it all, the concept of the Apartheid calls for the separation of races. This will have to be done quickly and decivisely, before the Coloured and their British allies get any ideas."
+SAF_nationalist_reform_desc:0 "The victory of the Nationalists in the 1938 Elections also implies the victory of all the ideas that had since sat on the fringes of the ruling party. At the centre of it all, the concept of the Apartheid calls for the separation of races. This will have to be done quickly and decisively, before the Coloured and their British allies get any ideas."
 
 SAF_dominionist_reform:0 "The Port Elisabeth Declaration"
-SAF_dominionist_reform_desc:0 "The victory of the Dominionists in the 1938 Elections also implies the victory of all the ideas that had since been struck out of the Afrikaner-dominated government. At the center of it all, the hope of repairing what is seen as the historical mistake of betraying the British. No small moves or diplomatic niceties will suffice, but the Afrikaners might not take it lightly"
+SAF_dominionist_reform_desc:0 "The victory of the Dominionists in the 1938 Elections also implies the victory of all the ideas that had since been struck out of the Afrikaner-dominated government. At the centre of it all, the hope of repairing what is seen as the historical mistake of betraying the British. No small moves or diplomatic niceties will suffice, but the Afrikaners might not take it lightly"
 
 SAF_implement_apartheird:0 "Implement the Apartheid"
 SAF_implement_apartheird_desc:0 "After a period of consolidation, we are now in a position to strengthen existing segregation laws to bring about full separation of the four South African nations both socially and politically. The Volksraad is behind us and set to carry our governments program through."
 
 SAF_implement_federation:0 "Implement the Federation"
-SAF_implement_federation_desc:0 "While we have been calling ourserves the South African Federation for a while, we have not yet implemented all the reforms we needed to make that change official. With the country stabilized and our opposition beaten, we can now move and rewrite the Constitution. The Union is no more, but South Africa lives on."
+SAF_implement_federation_desc:0 "While we have been calling ourselves the South African Federation for a while, we have not yet implemented all the reforms we needed to make that change official. With the country stabilised and our opposition beaten, we can now move and rewrite the Constitution. The Union is no more, but South Africa lives on."
 
 
 ### Ideas ###
@@ -202,7 +202,7 @@ racial_segregation:0 "Racial Segregation"
 racial_segregation_desc:0 "South Africa is a divided nation. While the vast majority of the population belongs to the various native ethnic African groups, socio-economic power is held by the white European minority. This in turn is divided between the Afrikaners, Dutch-speaking descendants of the original Dutch colonists and the Boers who settled the Transvall and Orange Free State, and the British who form the majority of the white population in Natal and Rhodesia."
 
 racial_segregation_apartheid:0 "Apartheid"
-racial_segregation_apartheid_desc:0 "South Africa is a divided nation. While the vast majority of the population belong to the various native ethnic African groups, socio-economic power is held by the white European minority. The recent implemention of the Apartheird has excarberated tensions, but has also allowed the state to brutally expand its conscription to fit the need for a larger law enforcement force."
+racial_segregation_apartheid_desc:0 "South Africa is a divided nation. While the vast majority of the population belong to the various native ethnic African groups, socio-economic power is held by the white European minority. The recent implementation of the Apartheid has exacerbated tensions, but has also allowed the state to brutally expand its conscription to fit the need for a larger law enforcement force."
 
 paramount_chiefs:0 "Paramount Chiefs"
 paramount_chiefs_desc:0 "We have left a great deal of autonomy to the newly integrated HCTs. This and the goodwill of the new Paramount Chiefs ensures political and economical stability in the Native lands for the years to come."
@@ -277,7 +277,7 @@ SAF_no_rights_compromised_tt:0 "We will §Ynot compromise any Native rights for 
 SAF_some_rights_compromised_tt:0 "We will §Ycompromise some Native rights to help development in the Nuweveld.§!\n"
 SAF_all_rights_compromised_tt:0 "We will §Ysuspend all Native rights and put them to forced labour to help development in the Nuweveld.§!\n"
 
-SAF_industrialise_tt:0 "We will focus the §YNational Recovery Plan§! on §Yrapid industralisation.§!\n"
+SAF_industrialise_tt:0 "We will focus the §YNational Recovery Plan§! on §Yrapid industrialisation.§!\n"
 SAF_liberalise_tt:0 "We will focus the §YNational Recovery Plan§! on §Yliberalisation and trade with the Entente.§!\n"
 SAF_work_programs_tt:0 "We will focus the §YNational Recovery Plan§! on §Ywork programs for the unemployed.§!\n"
 
@@ -418,7 +418,7 @@ SACW.18.d:0 "One hundred years ago, our ancestors set out from the Cape, seeking
 SACW.18.a:0 "Oh Dear!"
 
 SACW.19.t:0 "The Ossewabrandwag Riots"
-SACW.19.d:0 "Throughout the former Boer Republics branches of the Ossewabrandwag have formed and have begun to organise protests against our government, many of them descending into rioting. The Afrikaner nationalists target natives and Britons alike as they view these groups as collaborating against them to destroy Afrikaner culture. Police and military units stationed nearbye have been reluctant to intervene and have done little to end the violence."
+SACW.19.d:0 "Throughout the former Boer Republics branches of the Ossewabrandwag have formed and have begun to organise protests against our government, many of them descending into rioting. The Afrikaner nationalists target natives and Britons alike as they view these groups as collaborating against them to destroy Afrikaner culture. Police and military units stationed nearby have been reluctant to intervene and have done little to end the violence."
 SACW.19.a:0 "Outrageous!"
 
 SACW.20.t:0 "ISL Mineworkers Strike"
@@ -443,7 +443,7 @@ SACW.24.a:0 "No, we will preserve the Union!"
 SACW.24.b:0 "Restore the Zuid-Afrikaansche Republiek!"
 
 SACW.25.t:0 "The Nationalist Coup"
-SACW.25.d:0 "Forces still loyal to the ex-president Hertzog have launched an open revolt with the aim of seizing control of the country and reversing our attempts at federalization. While successful in the Orange Free State and the Transvaal, where they met little resistance and were joined by local military units, elsewhere they made minimal progress thanks to the obstruction of loyalist forces and populations. In Cape Town, militants of the Ossewabrandwag have tried to occupy the Parliament but were repulsed by the Guard and a rapidly formed militia which drove them from the city.\n\nAs a result, today in the Pretoria City Hall the provincial governors of both the Transvaal and the Orange Free State have declared their secession from the Union of South Africa, effective immediately. They have formed together the second Zuid-Afrikaansche Republiek and named Hertzog as their new President."
+SACW.25.d:0 "Forces still loyal to the ex-president Hertzog have launched an open revolt with the aim of seizing control of the country and reversing our attempts at federalisation. While successful in the Orange Free State and the Transvaal, where they met little resistance and were joined by local military units, elsewhere they made minimal progress thanks to the obstruction of loyalist forces and populations. In Cape Town, militants of the Ossewabrandwag have tried to occupy the Parliament but were repulsed by the Guard and a rapidly formed militia which drove them from the city.\n\nAs a result, today in the Pretoria City Hall the provincial governors of both the Transvaal and the Orange Free State have declared their secession from the Union of South Africa, effective immediately. They have formed together the second Zuid-Afrikaansche Republiek and named Hertzog as their new President."
 SACW.25.a:0 "If it's a fight they want."
 
 SACW.26.t:0 "Civil War in South Africa!"
@@ -530,6 +530,6 @@ SACW.44.t:0 "The End of the Fourth Boer War"
 SACW.44.d:0 "For good or ill, the Fourth Boer War is now over."
 SACW.44.a:0 "Great!"
 
-SACW.45.t:0 "South Africa Stabilizes"
+SACW.45.t:0 "South Africa Stabilises"
 SACW.45.d:0 "With the worst of times over, we can finally to claim to have full control over the country. An eery calm reigns over South Africa, and we finally stand proud and victorious. It is time to get our reforms underway, and prevent our country from descending into chaos and anarchy again."
 SACW.45.a:0 "No time to waste!"
