--- a/localisation/KR_Spain_l_english.yml
+++ b/localisation/KR_Spain_l_english.yml
@@ -90,7 +90,7 @@ SPR_national_populist_party_long:0 "Juntas de Ofensiva Nacional-Sindicalista"
 ### Domestic ###
 
 sprd.1.t: "The Kingdom of Spain"
-sprd.1.d:0 "The Kingdom of Spain: Once the greatest of the Colonial Empires, she saw all of her remaining overseas colonies lost after a swift war against the USA in 1898. After this, separatist movements in both the Basque country and Catalonia arose, and both the Church and a radical worker's movement, the CNT, are interfering in her internal politics. Spain's populace has become deeply divided. \n\nAfter taking his place on the throne in 1902, King Alfonso XIII seemed keen on regaining Spain's former status as a colonial power by intervening in Morocco. The intervention lasted for a whole decade, and the outcome, while a victory, was not exactly in favour for Spain: Her Moroccan possessions remain a source of permanent unrest. Spain turned in on herself afterwards, remaining neutral during the Weltkrieg, all while the populace's faith in King Alfonso faded. \n\nAs a result of the General Elections of 1931, the Second Spanish Republic was proclaimed, and Alfonso, accepting the will of his people, went into exile. However, the Republic lasted only a short while. The Kingdom was restored by a coup d'état lead by General Sanjurjo just a year later. Still, the memories of the short-lived failure that was the Spanish Republic fuel the regime's opponents left and right. \n\nTo date, there remain deep divisions within Spanish society. On the one hand, the resurgent Carlist Movement, headed by Alfonso Carlos, aims to re-establish the 'True Dynasty' and recreate an integralist Christian monarchy, and on the other, the anarcho-syndicalist CNT-FAI seeks the abolition of the Spanish state altogether, and to replace it with a voluntarist federation of communes and economic collectives. If the political split is not mended, Spain might even see a Civil War."
+sprd.1.d:0 "The Kingdom of Spain: Once the greatest of the Colonial Empires, she saw all of her remaining overseas colonies lost after a swift war against the USA in 1898. After this, separatist movements in both the Basque country and Catalonia arose, and both the Church and a radical worker's movement, the CNT, are interfering in her internal politics. Spain's populace has become deeply divided. \n\nAfter taking his place on the throne in 1902, King Alfonso XIII seemed keen on regaining Spain's former status as a colonial power by intervening in Morocco. The intervention lasted for a whole decade, and the outcome, while a victory, was not exactly in favour for Spain: Her Moroccan possessions remain a source of permanent unrest. Spain turned in on herself afterwards, remaining neutral during the Weltkrieg, all while the populace's faith in King Alfonso faded. \n\nAs a result of the General Elections of 1931, the Second Spanish Republic was proclaimed, and Alfonso, accepting the will of his people, went into exile. However, the Republic lasted only a short while. The Kingdom was restored by a coup d'état lead by General Sanjurjo just a year later. Still, the memories of the short-lived failure that was the Spanish Republic fuel the regime's opponents left and right. \n\nTo date, there remain deep divisions within Spanish society. On the one hand, the resurgent Carlist Movement, headed by Alfonso Carlos, aims to re-establish the 'True Dynasty' and recreate an integralist Christian monarchy, and on the other, the anarcho-syndicalist CNT-FAI seeks the abolition of the Spanish state altogether, and to replace it with a voluntary federation of communes and economic collectives. If the political split is not mended, Spain might even see a Civil War."
 sprd.1.a: "Let us prevail."
 
 sprd.2.t:0 "Black Monday hits Spain"
@@ -181,7 +181,7 @@ sprd.20.t:0 "The mines and roads are opening"
 sprd.20.d:0 "The CNT-FAI's operations in the southern part of our country are steadily reaching their planned production. The organisation has put the workers to good use. Everything seems to be going very well"
 sprd.20.a:0 "Well shall see where this goes"
 
-### elections
+### Elections ###
 
 sprd.21.t:0 "Our King has a stroke!"
 sprd.21.d:0 "In the early morning, King Alfonso III suffered a serious stroke. His doctors are caring for him but the outcome is unknown!"
@@ -220,9 +220,9 @@ sprd.27.b:0 "No, perhaps the time of the kingdom is over"
 sprd.28.t:0 "Restoring the Monarchy"
 sprd.28.d:0 "After the assassination of Juan, a void was left in the terms of a Royal Regent. Now Juan's older brother Jaime has returned from abroad and is requesting his rightful place as the heir to our Kingdom."
 
-### post-war
+### Post-War ###
 
-### foreign ###
+### Foreign ###
 
 sprf.1.t:0 "The Mediterranean Economic Bloc"
 sprf.1.d:0 "Javier de Borbón-Parma, leader of the Carlist line of the Spanish royal family, has decided to do something to fight the economic crisis currently hurting much of Europe. His idea is to form a Mediterranean Economic Bloc to combat the stagnation together. Surely he has further plans as well."
@@ -253,7 +253,7 @@ sprf.7.a:0 "sore wa ii desu ne."
 ### Civil War ###
 
 sprc.1.t:0 "Carlist uprising!"
-sprc.1.d:0 "Disaster - Carlists in the armed forces have united with the remnants of the Requêtes to seize control of Northern Spain! Carlist political organisations are taking over state authorities, the rural clergy are mobilizing the masses, and the pretender has flown in to Burgos to proclaim the beginning of a Second Reconquista to reclaim Spain for a truly Catholic Dynasty!"
+sprc.1.d:0 "Disaster - Carlists in the armed forces have united with the remnants of the Requêtes to seize control of Northern Spain! Carlist political organisations are taking over state authorities, the rural clergy are mobilising the masses, and the pretender has flown in to Burgos to proclaim the beginning of a Second Reconquista to reclaim Spain for a truly Catholic Dynasty!"
 sprc.1.a:0 "We shall fight them!"
 sprc.1.b:0 "Long live Javier I! (Play as the §YCarlists§!)"
 
@@ -286,7 +286,7 @@ sprc.103.d:0 "For good or ill, the Spanish war is now over. The General Staff ha
 sprc.103.a:0 "Great!"
 
 sprc.122.t:0 "[Root.GetAdjective] Terror"
-sprc.122.d:0 "During ongoing civil war some of our commanders started to use rather doubtfull methods to permanently supress civilian population suspicious of helping our mortal enemies. Such policies, even if looks drastical are neccesary in these dark times."
+sprc.122.d:0 "During ongoing civil war some of our commanders started to use rather doubtful methods to permanently suppress civilian population suspicious of helping our mortal enemies. Such policies, even if looks drastic, are necessary in these dark times."
 sprc.122.a:0 "War is war..."
 
 ### Post-War ###
@@ -307,7 +307,7 @@ sprc.206.d:0 "For good or ill, the Spanish war is now over. The General Staff ha
 sprc.206.a:0 "Great!"
 
 sprc.207.t:0 "Workers Rise Up"
-sprc.207.d:0 "Our efforts at organizing and building along the coast are paying off. The workers have risen to stand with us, and our secret work at building forts in the old castles and watch posts have come to fruition."
+sprc.207.d:0 "Our efforts at organising and building along the coast are paying off. The workers have risen to stand with us, and our secret work at building forts in the old castles and watch posts have come to fruition."
 sprc.207.a:0 "Huzzah!"
 
 sprc.208.t:0 "Returning from France"
@@ -423,7 +423,7 @@ sprc.306.a:0 "Use it as leverage with the Kingdom"
 sprc.306.b:0 "Let them do it"
 
 sprc.307.t:0 "A CNT-FAI Offer"
-sprc.307.d:0 "The CNT-FAI has secretly approached us with information they claim could save a very important life - namely that of Juan III, the royal heir. If we surrender to them, they will grant clemency for the government and Royal Family. If we do not, the life of the heir and the future of the kingdom will be in serious jeapordy. That is, of course, if we believe them."
+sprc.307.d:0 "The CNT-FAI has secretly approached us with information they claim could save a very important life - namely that of Juan III, the royal heir. If we surrender to them, they will grant clemency for the government and Royal Family. If we do not, the life of the heir and the future of the kingdom will be in serious jeopardy. That is, of course, if we believe them."
 sprc.307.a:0 "Never! - the royal family is safe"
 sprc.307.b:0 "For the sake of the royal family, we should agree"
 
