--- a/localisation/KR_World_News_l_english.yml
+++ b/localisation/KR_World_News_l_english.yml
@@ -47,7 +47,7 @@ worldnews.7.e:0 "The rightful Tsar of Russia returns!"
 worldnews.8.t:0 "Russia Announces Her Ambitions"
 worldnews.8.d:0 "While many still view Russia as a failed state, torn apart by revolts, disorder and ineffective rule and serving as a buffer for Mitteleuropa, recent events have proven something different. The government of the Russian nation has announced their territorial ambitions, laying claims on almost all the territory of the former Russian Empire. And it appears they are willing to reconquer the lost land if necessary.\n\nNumerous nations in Eastern Europe have already recalled their embassies in Russia, and the world is waiting for Germany's response to this blatant attack on her sphere of influence."
 worldnews.8.a:0 "This expansionism is worrisome."
-worldnews.8.b:0 "Let us review our army and defenses, urgently."
+worldnews.8.b:0 "Let us review our army and defences, urgently."
 worldnews.8.c:0 "We will contain Russia again if need be."
 worldnews.8.e:0 "Russia will recover all its sovereign territories!"
 
@@ -55,7 +55,7 @@ worldnews.9.t:0 "The First International Congress"
 worldnews.9.d:0 "Representatives from numerous Syndicalist and Socialist nations have gathered in Paris today, in what might just be a defining moment in the history of the ideologies. The French Commune has invited numerous countries to the first official gathering of the members of the Third Internationale to discuss political, foreign matters and cooperate on spreading Socialism further. The French opened the International with a powerful parade, festivities in Paris and finally a speech by the Chairman of the CSP. \n\nTopics like Spain, the United States and the world economic crisis are at the top priority, and it's expected that France and Britain will take initiative in the gathering."
 worldnews.9.a:0 "The Syndicalists plot once more in the open against us all."
 worldnews.9.b:0 "The Internationale Congress has many issues to settle."
-worldnews.9.c:0 "We are proud to host the first Internionale Congress!"
+worldnews.9.c:0 "We are proud to host the first Internionale Congress!" # is Internionale correct?
 
 worldnews.10.t:0 "Rise of the Mongol Empire"
 worldnews.10.d:0 "News and reliable sources of them are scarce in the vast plains of Mongolia, but it has recently come to light that the Mad Baron of Mongolia, Roman Ungern von Sternberg, has risen to new heights and declared himself to be the successor to Genghis Khan, appropriately named Ungern Khan.\n\nIt is now known what this change will entail, though. The Mongolian army has already defeated the Ma Clique and von Sternberg has declared his right to reign over all Mongolians numerous times before. Experts deny the possibility that the Mongolians could pose a threat to the established powers in the Far East, but the fresh Khan's ambition can only grow higher."
@@ -205,7 +205,7 @@ worldnews.28.e:0 "Long live King Edward VII, king of the British Empire!"
 worldnews.29.t:0 "French Loyalists Restore Monarchy"
 worldnews.29.d:0 "After a brief French Civil War, the old government of France and its supporters fled to North Africa to escape Syndicalist wrath. There, the nation eventually devolved into a military junta under the Lion of Verdun, Philippe Petain. However, a big question arose in this defeated nation, what should its future be? Retaking France is the priority, yes, but what should be the government?\n\nIt appears that the French have answered the question themselves, though, as the National French State has accepted an agreement to restore the monarchy in France."
 worldnews.29.a:0 "So, the legacy of the French Revolution is over?"
-worldnews.29.b:0 "Perhaps we misjuged the French nation after all."
+worldnews.29.b:0 "Perhaps we misjudged the French nation after all."
 worldnews.29.c:0 "This self-styled French king will soon see how the last one died."
 worldnews.29.e:0 "France knows no king or emperor. The French workers will see him through!"
 worldnews.29.f:0 "A difficult choice for our French ally, but one we respect."
@@ -225,7 +225,7 @@ worldnews.31.d:0 "The Commune of France is the world's leading Syndicalist natio
 worldnews.31.a:0 "An extension to democracy? What democracy?"
 worldnews.31.b:0 "The Travailleurs bring nothing revolutionary to the table."
 worldnews.31.c:0 "Stability, centralised rule and preserving democracy. A solid mandate."
-worldnews.31.e:0 "If the French people could do us a favor, it would be to vote us in next time."
+worldnews.31.e:0 "If the French people could do us a favour, it would be to vote us in next time."
 worldnews.31.f:0 "The Travailleurs maintain the legacy of the Paris Commune."
 
 worldnews.32.t:0 "Syndicalism Prevails in Ukraine"
@@ -234,7 +234,7 @@ worldnews.32.a:0 "Even Mitteleuropa is not safe from Syndicalism."
 worldnews.32.b:0 "Congratulations to the Ukrainian workers for casting out the reactionaries!"
 worldnews.32.c:0 "This will not stand. Ukraine will regret this!"
 worldnews.32.e:0 "Congratulations to Comrade Khruschev for freeing Ukraine."
-worldnews.32.f:0 "Ukraine is free from German and Russian oppresion. Rejoice!"
+worldnews.32.f:0 "Ukraine is free from German and Russian oppression. Rejoice!"
 
 worldnews.33.t:0 "Jacobins Elected in France"
 worldnews.33.d:0 "The Commune of France is the world's leading Syndicalist nation, united as a federation of city communes and directed by the Comité de Salut Public, the chief executive. Ever since its inception, however, the Second Commune was not uniform in its policy, numerous factions arose, each one with their own idea of which path France should take. As the time for revenge against Germany and the World Revolution closes in, the CGT election of 1936 is set to be very important.\n\nThe replacement for the disgraced Marceau Pivert arose from the Jacobins, an extremist faction standing in favour of increased centralisation and turning France into a vanguard state for all Syndicalists to follow. They now hold the majority in the CSP."
@@ -354,7 +354,7 @@ worldnews.46.e:0 "The Cypriots will pay for this betrayal. Cyprus is Turkish! Pr
 worldnews.46.f:0 "Today, we finally stand ready to decide for our own people. Enough with the Empires!"
 
 worldnews.47.t:0 "The Cypriot Independence"
-worldnews.47.d:0 "As many expected, the declaration of independence of the Kurds was the start of a longer period of turmoil for the old Ottoman Empire, with cultures that had long been suppressed or 'integrated' pushing for their independence.\n\nNow, Cyprus joins the fray, having long been a state in flux, if not chaos, settled by the Greeks, captured by many ancient empires, Assyrians, Egyptians, Persians and the Romans, captured by the Arabic Caliphate, French Crusaders, Venetians, and finally the Ottomans until 1878, before a short and finally reverted annexation by Britain. Today, the Sultan has recognized the Greek Cypriot state, putting an end to four millenias of occupation by foreign powers."
+worldnews.47.d:0 "As many expected, the declaration of independence of the Kurds was the start of a longer period of turmoil for the old Ottoman Empire, with cultures that had long been suppressed or 'integrated' pushing for their independence.\n\nNow, Cyprus joins the fray, having long been a state in flux, if not chaos, settled by the Greeks, captured by many ancient empires, Assyrians, Egyptians, Persians and the Romans, captured by the Arabic Caliphate, French Crusaders, Venetians, and finally the Ottomans until 1878, before a short and finally reverted annexation by Britain. Today, the Sultan has recognized the Greek Cypriot state, putting an end to four millennia of occupation by foreign powers."
 worldnews.47.a:0 "The Cypriots finally earn their independence, at the expense of the Ottomans."
 worldnews.47.b:0 "We raise a toast to our Greek Cypriot brothers. The Greeks are strong!"
 worldnews.47.c:0 "A favourable end to the Cypriots, another open wound for the Empire in the East."
@@ -376,7 +376,7 @@ worldnews.49.c:0 "They might need our support, will they win this time? Can we t
 worldnews.49.e:0 "They learned nothing! All the traitors will die! Praise the Sultan!"
 
 worldnews.50.t:0 "The Ottoman-Axis War"
-worldnews.50.d:0 "For a long time, the Ottomans have ruled over the Levant and its Arab population. For many of them, this was an outrage, and the Entente capitalised on this during the Weltkrieg to spark a revolt that crippled the Ottoman's war efforts. Albeit unsucessful in the long run, this planted the seeds for future unrest.\n\nThe foundation of the Axis in 1936 seemed like a challenge to the Ottoman Empire, and indeed today this confrontation came to an end as Egypt announced the entry in the war of the entire alliance against the Ottomans. In response, Arabs in all major cities of the Levant rose in revolt, with equipment that many speculate has been provided by these states that are now crossing the border into Ottoman territory."
+worldnews.50.d:0 "For a long time, the Ottomans have ruled over the Levant and its Arab population. For many of them, this was an outrage, and the Entente capitalised on this during the Weltkrieg to spark a revolt that crippled the Ottoman's war efforts. Albeit unsuccessful in the long run, this planted the seeds for future unrest.\n\nThe foundation of the Axis in 1936 seemed like a challenge to the Ottoman Empire, and indeed today this confrontation came to an end as Egypt announced the entry in the war of the entire alliance against the Ottomans. In response, Arabs in all major cities of the Levant rose in revolt, with equipment that many speculate has been provided by these states that are now crossing the border into Ottoman territory."
 worldnews.50.a:0 "The goals of the Axis were always clear. The Levant burns once more."
 worldnews.50.b:0 "The Turks made their last mistake. Today, we free our brothers. The Sultan will fall."
 worldnews.50.c:0 "And so, it seems, ends the story of the Ottoman Empire. A revenge for Gallipoli."
@@ -407,7 +407,7 @@ worldnews.53.c:0 "Poland would be wise to not upset the region's stability with 
 
 worldnews.54.t:0 "Poland Declares the Republic"
 worldnews.54.d:0 "After several high-profile terror attacks in Poland and the near-total collapse of their economy, a large group of high-ranking Polish officials have released a statement declaring the creation of a new 'Polish Republic'. The declaration was met with immediate declarations of support from many government branches, and it appears that the Republic has taken control of most of the country with almost no bloodshed.\n\nThe Regency Council, the former ruling authority in Poland, has been dissolved, and the question of the next Polish King left forever unanswered. The people have rallied around the new Republic, and the country's new future appears bright."
-worldnews.54.a:0 "At least the reactionary Regency has been cast out. Hopefully the workers will suceed."
+worldnews.54.a:0 "At least the reactionary Regency has been cast out. Hopefully the workers will succeed."
 worldnews.54.b:0 "A new liberal Republic rises in Mitteleuropa. The Old Order can't yet fade, can it?"
 worldnews.54.c:0 "We welcome the rise of a new, healthy democracy in Poland! Good luck to the Sejm."
 worldnews.54.e:0 "Enough with foreign Kings! Today, Polish citizens will vote for their new leader."
