--- a/localisation/KR_Annexations_l_english.yml
+++ b/localisation/KR_Annexations_l_english.yml
@@ -585,7 +585,7 @@ annex.150.t:0 "The Fate of Bosnia"
 annex.150.d:0 "The divided state of Bosnia is now under our occupation after our invasion of its territory. Our troops are parading in Sarajevo and we must decide what to do with it."
 annex.150.a:0 "Give it to our Serbian friend"
 annex.151.t:0 "The Fate of Montenegro"
-annex.151.d:0 "Montenegro is now firmly held in our hands after our occupation of the area, yet we can't stay in the unhospitable Montenegro forever. We must decide what to do with it."
+annex.151.d:0 "Montenegro is now firmly held in our hands after our occupation of the area, yet we can't stay in the inhospitable Montenegro forever. We must decide what to do with it."
 annex.152.t:0 "The Fate of Albania"
 annex.152.d:0 "After a short campaign across the Albanian countryside, Tirana finally capitulated, leaving us with the control of their country. We must now decide what to do with it."
 annex.152.a:0 "Give Kosovo to Serbia and liberate the rest"
