--- a/localisation/KR_Flanders-Wallonia_l_english.yml
+++ b/localisation/KR_Flanders-Wallonia_l_english.yml
@@ -455,9 +455,9 @@ BEL_urban_projects_capital_desc:0 "We can transform our capital into a true mode
 BEL_fortress_belgium:0 "Recreate Liège's Forts Belt"
 BEL_fortress_belgium_desc:0 "The forts of Liège were a key element in the Belgian defence against Germany at the beginning of the Great War. An important building program must begin as soon as possible in order to make it a key element to deter Germany from attacking. Don't just forget the take into account the possibility of a glider assault."
 BEL_reinforce_antwerp_brussels:0 "Ligne KW Linie"
-BEL_reinforce_antwerp_brussels_desc:0 "Brabant is at the heart of our country and here lies our most important cities. Antwerp was a key fortress in the past and Brussels is the center of our nation. The fortification of both regions will transform them into a bulwark against any enemy invasion. Extending from the village of Koningshooikt to the town of Wavre the line will be equipped with anti-tank ditches, bunkers and Cointet anti-tank traps." 
+BEL_reinforce_antwerp_brussels_desc:0 "Brabant is at the heart of our country and here lies our most important cities. Antwerp was a key fortress in the past and Brussels is the centre of our nation. The fortification of both regions will transform them into a bulwark against any enemy invasion. Extending from the village of Koningshooikt to the town of Wavre the line will be equipped with anti-tank ditches, bunkers and Cointet anti-tank traps." 
 BEL_fortress_french_border:0 "Fortify the French Border"
-BEL_fortress_french_border_desc:0 "The French are our real ennemies and we must be prepared in case of war."
+BEL_fortress_french_border_desc:0 "The French are our real enemies and we must be prepared in case of war."
 BEL_Support_the_congo_railways:0 "Office des Transports Coloniaux"
 BEL_Support_the_congo_railways_desc:0 "Founded in 1935 the "Office des transports coloniaux" or OTRACO, ("Bureau of Colonial Transportations") was in charge of the railway system in the Belgian Congo."
 BEL_congo_rubber:0 "Extend The Rubber Plantations"
