--- a/localisation/KR_Partitions_l_english.yml
+++ b/localisation/KR_Partitions_l_english.yml
@@ -29,7 +29,7 @@ part.14.d:0 "The new government in Berlin is firmly under our control and German
 part.14.a:0 "Pax Europa!"
 
 part.15.t:0 "The Kaiserliches Heer"
-part.15.d:0 "Form up the Active Defense!"
+part.15.d:0 "Form up the Active Defence!"
 part.15.a:0 "Form up the Troops!"
 
 part.16.t:0 "Choosing the new German Head of State."
@@ -402,9 +402,9 @@ part.91.a:0 "Give it back to the Swiss."
 part.91.b:0 "No, it's ours now!"
 
 part.92.t:0 "Western Flandern-Wallonia"
-part.92.d:0 "According to the Rexist-Flamish national union the final defeat and subsequent occupation of the Commune of France provides us with uniqe chance to regain our once integral part - Western Flandern-Wallonia. If we want to claim it for our state we must turn to German Empire for support."
+part.92.d:0 "According to the Rexist-Flamish national union the final defeat and subsequent occupation of the Commune of France provides us with unique chance to regain our once integral part - Western Flandern-Wallonia. If we want to claim it for our state we must turn to German Empire for support."
 part.92.a:0 "Claim the Western Flandern-Wallonia!"
-part.92.b:0 "Those claims are aburd"
+part.92.b:0 "Those claims are absurd"
 
 part.93.t:0 "Flanders-Wallonia claims the western Flanders-Wallonia"
 part.93.d:0 "The government of Flanders-Wallonia has claimed region once known as the Western Flanders-Wallonia which is currently part of France. What shall be our stance towards this claim ?"
@@ -444,7 +444,7 @@ part.100.d:0 "Russian Empire has imposed Prince Ioann Konstantinovich as the new
 part.100.a:0 "Long live Charles XI!"
 
 part.101.t:0 "Forces armées françaises"
-part.101.d:0 "Form up the Active Defense!"
+part.101.d:0 "Form up the Active Defence!"
 part.101.a:0 "Form Up the Troops!"
 
 part.102.t:0 "Loyal governments in the new French states"
@@ -531,7 +531,7 @@ part.118.b:0 "Let Great Britain become a republic instead."
 
 part.119.t:0 "Russia has imposed a King on us"
 part.119.d:0 "We will become a monarchy again."
-part.119.a:0 "Long live Wiliam IV!"
+part.119.a:0 "Long live William IV!"
 
 part.120.t:0 "Russia let us choose our new President"
 part.120.d:0 "We are a Republic once again."
@@ -578,7 +578,7 @@ part.129.a:0 "Establish a friendly Scotland."
 part.129.b:0 "Total occupation of Scotland!"
 
 part.130.t:0 "Freedom!"
-part.130.d:0 "Thanks to russian liberators we are once again free!"
+part.130.d:0 "Thanks to Russian liberators we are once again free!"
 part.130.a:0 "We will never be the tools of the English again!"
 
 part.131.t:0 "A loyal puppet in Edinburgh"
@@ -586,22 +586,22 @@ part.131.d:0 "The new government of Scotland is under our control! May this be t
 part.131.a:0 "Pax Europa!"
 
 part.132.t:0 "Language question"
-part.132.d:0 "Our policy on the offical language of the Wales has to be formed. While varying areas speak Welsh or English, we need to decide the working language of our government. Welsh is the obvious choice, as we have just received independence after hunderds years of English tyranny and we need to solidify our national identity if we are to survive. But majority of our population, even if they consider themselves Welsh continues to use English language as their primary language and establishment of Welsh as primary language would greatly upset them. What shall we do ?"
+part.132.d:0 "Our policy on the official language of the Wales has to be formed. While varying areas speak Welsh or English, we need to decide the working language of our government. Welsh is the obvious choice, as we have just received independence after hundreds years of English tyranny and we need to solidify our national identity if we are to survive. But majority of our population, even if they consider themselves Welsh continues to use English language as their primary language and establishment of Welsh as primary language would greatly upset them. What shall we do ?"
 part.132.a:0 "The government will be bilingual!"
 part.132.b:0 "Use only Welsh for the government."
 
 part.133.t:0 "Language question"
-part.133.d:0 "ur policy on the offical language of the Brittany has to be formed. While varying areas speak Breton or French, we need to decide the working language of our government. Breton is the obvious choice, as we have just received independence after hunderds years of French tyranny and we need to solidify our national identity if we are to survive. But majority of our population, even if they consider themselves Breton continues to use French language as their primary language and establishment of Breton as primary language would greatly upset them. What shall we do ?"
+part.133.d:0 "ur policy on the official language of the Brittany has to be formed. While varying areas speak Breton or French, we need to decide the working language of our government. Breton is the obvious choice, as we have just received independence after hundreds years of French tyranny and we need to solidify our national identity if we are to survive. But majority of our population, even if they consider themselves Breton continues to use French language as their primary language and establishment of Breton as primary language would greatly upset them. What shall we do ?"
 part.133.a:0 "The government will be bilingual!"
 part.133.b:0 "Use only Breton for the government."
 
 part.134.t:0 "Language question"
-part.134.d:0 "Our policy on the offical language of the Normandy has to be formed. While varying areas speak Norman or French, we need to decide the working language of our government. Norman is the obvious choice, as we have just received independence after hunderds years of French tyranny and we need to solidify our national identity if we are to survive. But majority of our population, even if they consider themselves Norman continues to use French language as their primary language and establishment of Norman as primary language would greatly upset them. What shall we do ?"
+part.134.d:0 "Our policy on the official language of the Normandy has to be formed. While varying areas speak Norman or French, we need to decide the working language of our government. Norman is the obvious choice, as we have just received independence after hundreds years of French tyranny and we need to solidify our national identity if we are to survive. But majority of our population, even if they consider themselves Norman continues to use French language as their primary language and establishment of Norman as primary language would greatly upset them. What shall we do ?"
 part.134.a:0 "The government will be bilingual!"
 part.134.b:0 "Use only Norman for the government."
 
 part.135.t:0 "Language question"
-part.135.d:0 "Our policy on the offical language of the Occitania has to be formed. While varying areas speak Occitan or French, we need to decide the working language of our government. Occitan is the obvious choice, as we have just received independence after hunderds years of French tyranny and we need to solidify our national identity if we are to survive. But majority of our population, even if they consider themselves Occitan continues to use French language as their primary language and establishment of Occitan as primary language would greatly upset them. What shall we do ?"
+part.135.d:0 "Our policy on the official language of the Occitania has to be formed. While varying areas speak Occitan or French, we need to decide the working language of our government. Occitan is the obvious choice, as we have just received independence after hundreds years of French tyranny and we need to solidify our national identity if we are to survive. But majority of our population, even if they consider themselves Occitan continues to use French language as their primary language and establishment of Occitan as primary language would greatly upset them. What shall we do ?"
 part.135.a:0 "The government will be bilingual!"
 part.135.b:0 "Use only Occitan for the government."
 
